--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,9 @@ dependencies {
     compile "com.android.support:appcompat-v7:$supportLibVersion"
     compile "com.android.support:preference-v7:$supportLibVersion"
 
+    //Play Services
+    compile "com.google.android.gms:play-services-places:$playServices"
+    compile "com.google.android.gms:play-services-location:$playServices"
+
     testCompile 'junit:junit:4.12'
 }
