--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,14 +21,14 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value=""
+            android:value="AIzaSyDlJqjkaQDvMRUsJqEiFTlmJvlsee7dmDc"
             />
 
         <receiver android:name=".ShushMeGeofenceBroadcastReceiver"/>
     </application>
 
 
-
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 </manifest>
